impl/examples/errors/array_type_mismatch.ryu
let array_values = [1, true]
